@@ -374,6 +374,9 @@ Core and builtins
 Library
 -------
 
+- #1221598: add optional callbacks to ftplib.FTP's storbinary() and
+  storlines() methods.  (Contributed by Phil Schwartz)
+
 - #1715: include sub-extension modules in pydoc's text output.
 
 - #1836: fix an off-by-one bug in TimedRotatingHandler's rollover
